--- a/views/customer/auth/login.ejs
+++ b/views/customer/auth/login.ejs
@@ -1,13 +1,14 @@
-<%- include('../includes/head', { pageTitle: 'Signup' }) %>
+<%- include('../../shared/includes/head', { pageTitle: 'Login' }) %>
 <link rel="stylesheet" href="/styles/forms.css">
 <link rel="stylesheet" href="/styles/auth.css">
 </head>
 
 <body>
-  <%- include('../includes/header') %>
+  <%- include('../../shared/includes/header') %>
   <main>
     <h1>Login</h1>
     <form action="/login" method="POST">
+      <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>">
       <p>
         <label for="email">E-Mail</label>
         <input type="email" id="email" name="email" required>
@@ -20,4 +21,4 @@
       <p id="switch-form"><a href="/signup">Create a new user</a></p>
     </form>
   </main>
-  <%- include('../includes/footer') %>
+  <%- include('../../shared/includes/footer') %>
