--- a/views/shared/includes/head.ejs
+++ b/views/shared/includes/head.ejs
@@ -10,3 +10,5 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="/styles/base.css">
+  <link rel="stylesheet" href="/styles/navigation.css">
+  <script src="/scripts/mobile.js" defer></script>
